--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "consign": "^0.1.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.29"
   }
 }
